# starisdons

./: -dashboard.html index.html  .dockerignore  .eslintrc.js  .gcloudignore  .gitattributes  .gitignore  .gitlab-ci-enhanced.yml  .gitlab-ci.yml  .prettierignore  .prettierrc  3d-data-visualization-engine.js  ADD_MUSIC_INSTRUCTIONS.md  ADVANCED-AUDIT-APPENDIX-2025-12-07.md  ADVANCED-AUDIT-REPORT-2025-12-07.md  ADVANCED-AUDIT-VERIFICATION-2025-12-07.md  ADVANCED-DEBUGGING-GUIDE.md  ADVANCED-FEATURES-SETUP.md  AGENT-1-1301-1400-TODO-LIST.md  AGENT-1-1401-1500-TODO-LIST.md  AGENT-1-1501-1600-TODO-LIST.md  AGENT-1-1601-1700-TODO-LIST.md  AGENT-1-1801-1900-TODO-LIST.md  AGENT-1-1901-2000-TODO-LIST.md  AGENT-1-2001-2100-TODO-LIST.md  AGENT-1-FOCUS.md  AGENT-1-NEW-200-TODO-601-800.md  AGENT-1-NEW-200-TODO-LIST.md  AGENT-2-1001-1300-TODO-LIST.md  AGENT-2-1301-1800-TODO-LIST.md  AGENT-2-801-1000-TODO-LIST.md  AGENT-2-COMPLETE-WORK-SUMMARY.md  AGENT-2-NEW-200-TODO-LIST.md  AGENT-2-WORK-200-TODO-LIST.md  AGENT-3-50-TASKS-SUMMARY.md  AGENT-3-AI-ML-SCRIPTS-SURVEY.md  AGENT-3-CACHING-STRATEGY.md  AGENT-3-FOCUS.md  AGENT-3-PERFORMANCE-UTILITIES-INDEX.md  AGENT-4-WRAP-UP.md  AGENT-5-2000-TODO-LIST.md  (+2255 more)
Starsector/: log4j.properties  vmparams
agent6/: CLEAN-INTEGRATION.html  INTEGRATE-TO-ROOT.js  INTEGRATION.md  MAIN-ROOT-INTEGRATION.md  QUICK-INTEGRATION.md  README.md  ROOT-EXAMPLE.html  ROOT-INTEGRATION-SUMMARY.md  ROOT-INTEGRATION.js  index.html  modules.js  smoke-clean.html  smoke-fixed.html  (+4 more)
mechgen/: pyproject.toml
mechgen/mechgen/: __init__.py  __main__.py  cli.py  engine.py
(+5732 files in other folders)
